--- a/webapp/chess-piece-images/experiment.html
+++ b/webapp/chess-piece-images/experiment.html
@@ -4,12 +4,9 @@
 
         <style type="text/css">
             .game-square {
-                /* height: 90px;
-                width: 90px; */
-                display: inline-block;
-                border-width: 1px;
+                /* border-width: 1px;
                 border-color: black;
-                border-style: solid;
+                border-style: solid; */
 
                 /* Makes these squares unselectable.
                 Credit: https://stackoverflow.com/questions/10453167/make-html-text-unselectable */
@@ -31,10 +28,11 @@
                 width: 98%;
                 height: 98%;
                 object-fit: contain;
+                /* object-position: center; */
             }
 
             .board_row {
-                display: block;
+                display: flex;
             }
 
         </style>
@@ -42,21 +40,12 @@
 
         <script type='text/javascript'>
 
-            window.onresize = () => drawBoard();
-            
-            function drawBoard() {
-                let gameboard = document.getElementById("gameboard");
-                console.log(gameboard);
+            var board = initialBoardPosition();
 
-                let screenHeight = document.body.clientHeight;
-                let screenWidth = document.body.clientWidth;
+            window.onresize = () => drawBoard(board);
 
-                console.log(`Screen size is ${screenWidth} wide and ${screenHeight} tall`);
 
-                let lesserDim = Math.min(screenWidth, screenHeight);
-                let squareSize = (lesserDim  * 0.90) / 8;
-                console.log(`Square size is ${squareSize}`);
-
+            function initialBoardPosition() {
                 let board = Array.from({ length: 8 }, () => 
                 Array.from({ length: 8 }, () => "")
                 );
@@ -72,11 +61,22 @@
                 board[1] = Array.from({length: 8}, () => 'pawn-white')
                 board[6] = Array.from({length: 8}, () => 'pawn-black')
 
-                // let board = [
-                //     ["pawn-black", "pawn-black", "pawn-black", "pawn-black", "pawn-black", "pawn-black", "pawn-black", "pawn-black"],
-                //     ["knight-white", "knight-white", "knight-white", "knight-white", "knight-white", "knight-white", "knight-white", "knight-white"],
-                // ]
+                return board;
+            }
+            
 
+            function drawBoard(board) {
+                let gameboard = document.getElementById("gameboard");
+                console.log(gameboard);
+
+                let screenHeight = document.body.clientHeight;
+                let screenWidth = document.body.clientWidth;
+
+                console.log(`Screen size is ${screenWidth} wide and ${screenHeight} tall`);
+
+                let lesserDim = Math.min(screenWidth, screenHeight);
+                let squareSize = (lesserDim  * 0.90) / 8;
+                console.log(`Square size is ${squareSize}`);
 
                 let squares = "";
                 for(let row=0; row<board.length; row++) {
@@ -108,7 +108,7 @@
         </script>
 
     </head>
-    <body onload="drawBoard()">
+    <body onload="drawBoard(board)">
 
         <div id="gameboard"></div>
 
