Game viewer mockup displays game board

--- a/webapp/mockups/mockup2.html
+++ b/webapp/mockups/mockup2.html
@@ -2,12 +2,18 @@
 <html>
 
     <head>
+        <title>Analychess</title>
+        <meta charset='UTF-8'>
+        <link rel='stylesheet' type='text/css' href='mockup2.css' />
+        <script type='text/javascript' src='mockup2.js'></script>
 
     </head>
 
     <body>
+        <h1>Analychess</h1>
 
-        
+        <div id="gameboard" ></div>
+
     </body>
 
 </html>
