--- a/webapp/mockups/mockup1.html
+++ b/webapp/mockups/mockup1.html
@@ -2,12 +2,17 @@
 <html>
 
     <head>
-
+        <title>Analychess</title>
+        <meta charset='UTF-8'>
+        <link rel='stylesheet' type='text/css' href='app.css' />
     </head>
 
     <body>
 
-        
+        <h1>Analychess</h1>
+
+        <p>Search filters go here.</p>
+
     </body>
 
 </html>
