--- a/webapp/mockups/mockup2.html
+++ b/webapp/mockups/mockup2.html
@@ -4,7 +4,7 @@
     <head>
         <title>Analychess</title>
         <meta charset='UTF-8'>
-        <link rel='stylesheet' type='text/css' href='mockup2.css' />
+        <link rel='stylesheet' type='text/css' href='app.css' />
         <script type='text/javascript' src='mockup2.js'></script>
 
     </head>
@@ -12,7 +12,12 @@
     <body>
         <h1>Analychess</h1>
 
+        <h3><em>avocado</em> (1458) vs <em>Terry</em> (1522)</h3>
+
         <div id="gameboard" ></div>
+
+        <button>Back</button>
+        <button>Forward</button>
 
     </body>
 
