Add stats and captured pieces display

--- a/webapp/mockups/mockup2.html
+++ b/webapp/mockups/mockup2.html
@@ -19,6 +19,34 @@
         <button>Back</button>
         <button>Forward</button>
 
+        <h3>Captured</h3>
+
+        <div class='captured'>
+            <h5>White</h5>
+            <img src='chess-piece-images/bishop-black.png' />
+            <img src='chess-piece-images/pawn-black.png' />
+            <img src='chess-piece-images/pawn-black.png' />
+        </div>
+
+
+        <div class='captured'>
+            <h5>Black</h5>
+            <img src='chess-piece-images/pawn-white.png' />
+            <img src='chess-piece-images/knight-white.png' />
+            <img src='chess-piece-images/pawn-white.png' />
+            <img src='chess-piece-images/pawn-white.png' />
+            <img src='chess-piece-images/queen-white.png' />
+
+        </div>
+        
+        <div>
+            <h3>Stats</h3>
+            <p>Turn number: <b>3</b></p>
+            <p>Lead: <b>Black</b></p>
+
+        </div>
+
+
     </body>
 
 </html>
