Button unicode arrow and sidebar border

--- a/webapp/mockups/mockup2.html
+++ b/webapp/mockups/mockup2.html
@@ -16,19 +16,22 @@
 
         <div id='game-viewer'>
 
-
             <div>
                 <div id="gameboard" ></div>
-                <button>Back</button>
-                <button>Forward</button>
+                <button>&#9668; Back</button>
+                <button>Forward &#9658;</button>
             </div>
 
             
-            <div>
+            <div id="sidebar">
 
                 <h3>Stats</h3>
-                <p>Turn number: <b>3</b></p>
-                <p>Lead: <b>Black</b></p>
+
+                <p>
+                    Turn number: <b>3</b>
+                    <br/>
+                    Lead: <b>Black</b>
+                </p>
 
                 <h3>Captured</h3>
 
