--- a/webapp/mockups/mockup2.html
+++ b/webapp/mockups/mockup2.html
@@ -10,9 +10,11 @@
     </head>
 
     <body>
-        <h1>Analychess</h1> 
+
+        <h1>Analychess</h1>
 
         <h3><em>avocado</em> (1458) vs <em>Terry</em> (1522)</h3>
+        <hr />
 
         <div id='game-viewer'>
 
@@ -56,6 +58,10 @@
             </div>
 
         </div>
+
+
+    <div id='footer'><p><em>Created by <a href='https://github.com/BNwike47'> Barry Nwike</a> and <a href='https://github.com/cqnykamp'> Charles Nykamp</a>  for Carleton College Software Design Class, Fall 2022</em></p>
+    </div>
 
 
     </body>
