--- a/webapp/mockups/mockup1.html
+++ b/webapp/mockups/mockup1.html
@@ -5,7 +5,7 @@
         <title>Analychess</title>
         <meta charset='UTF-8'>
         <link rel='stylesheet' type='text/css' href='app.css' />
-        <script type = "text/javascript" src = "mockup2.js"></script>
+        <script type = "text/javascript" src = "mockup`.js"></script>
     </head>
 
     <body>
