--- a/webapp/mockups/mockup2.html
+++ b/webapp/mockups/mockup2.html
@@ -4,6 +4,7 @@
     <head>
         <title>Analychess</title>
         <meta charset='UTF-8'>
+        <link rel="icon" href="chess-piece-images/king-white.png" type="image/icon type">
         <link rel='stylesheet' type='text/css' href='app.css' />
         <script type='text/javascript' src='mockup2.js'></script>
 
@@ -11,7 +12,7 @@
 
     <body>
 
-        <h1>Analychess</h1>
+        <nav><img src='chess-piece-images/king-white.png' />Analychess</nav>
 
         <h3><em>avocado</em> (1458) vs <em>Terry</em> (1522)</h3>
         <hr />
@@ -34,6 +35,9 @@
                     <br/>
                     Lead: <b>Black</b>
                 </p>
+
+                <hr>
+
 
                 <h3>Captured</h3>
 
@@ -60,8 +64,7 @@
         </div>
 
 
-    <div id='footer'><p><em>Created by <a href='https://github.com/BNwike47'> Barry Nwike</a> and <a href='https://github.com/cqnykamp'> Charles Nykamp</a>  for Carleton College Software Design Class, Fall 2022</em></p>
-    </div>
+    <footer>Created by <a href='https://github.com/BNwike47'>Barry Nwike</a> and <a href='https://github.com/cqnykamp'>Charles Nykamp</a> for Carleton College Software Design Class, Fall 2022</footer>
 
 
     </body>
