--- a/webapp/mockups/mockup2.html
+++ b/webapp/mockups/mockup2.html
@@ -7,12 +7,12 @@
         <link rel="icon" href="chess-piece-images/king-white.png" type="image/icon type">
         <link rel='stylesheet' type='text/css' href='app.css' />
         <script type='text/javascript' src='mockup2.js'></script>
-
     </head>
+
 
     <body>
 
-        <nav><img src='chess-piece-images/king-white.png' />Analychess</nav>
+        <nav><a href="mockup1.html"><img src='chess-piece-images/king-white.png' />Analychess</a></nav>
 
         <h3><em>avocado</em> (1458) vs <em>Terry</em> (1522)</h3>
         <hr />
