Split css into general file and game viewer specific file

--- a/webapp/mockups/mockup2.html
+++ b/webapp/mockups/mockup2.html
@@ -6,6 +6,8 @@
         <meta charset='UTF-8'>
         <link rel="icon" href="chess-piece-images/king-white.png" type="image/icon type">
         <link rel='stylesheet' type='text/css' href='app.css' />
+        <link rel='stylesheet' type='text/css' href='mockup2.css' />
+
         <script type='text/javascript' src='mockup2.js'></script>
     </head>
 
