Game title visible

--- a/webapp/mockups/index.html
+++ b/webapp/mockups/index.html
@@ -6,7 +6,7 @@
 
     <body>
 
-        <h3>Links to wireframes</h3>
+        <h3>Links to mockups</h3>
         <ol>
             <li><a href='./mockup1.html'>Mockup 1: main page</a></li>
             <li><a href='./mockup2.html'>Mockup 2: game viewer page</a></li>
