--- a/webapp/mockups/mockup2.html
+++ b/webapp/mockups/mockup2.html
@@ -7,7 +7,6 @@
         <link rel="icon" href="chess-piece-images/king-white.png" type="image/icon type">
         <link rel='stylesheet' type='text/css' href='app.css' />
         <link rel='stylesheet' type='text/css' href='mockup2.css' />
-
         <script type='text/javascript' src='mockup2.js'></script>
     </head>
 
@@ -16,8 +15,7 @@
 
         <nav><a href="mockup1.html"><img src='chess-piece-images/king-white.png' />Analychess</a></nav>
 
-        <h3><em>avocado</em> (1458) vs <em>Terry</em> (1522)</h3>
-        <hr />
+        <h2 id='game-info'><em>avocado</em> (1458) vs <em>Terry</em> (1522)</h2>
 
         <div id='game-viewer'>
 
