Start to fix vertical formatting

--- a/webapp/mockups/mockup2.html
+++ b/webapp/mockups/mockup2.html
@@ -15,7 +15,18 @@
 
         <nav><a href="mockup1.html"><img src='chess-piece-images/king-white.png' />Analychess</a></nav>
 
-        <h2 id='game-info'><em>avocado</em> (1458) vs <em>Terry</em> (1522)</h2>
+        <div id='game-info'>
+            <div>
+                <span class="player-name">avocado</span> <img src="chess-piece-images/king-white.png" /> <span class="player-rating">1458</span>
+            </div>
+
+            <div>vs</div>
+            
+            <div>
+                <span class="player-name">Terry</span> <img src="chess-piece-images/king-black.png" /> <span class="player-rating">1522</span>
+            </div>
+        </div>
+
 
         <div id='game-viewer'>
 
