additional edits to mockup1 page

--- a/webapp/mockups/mockup1.html
+++ b/webapp/mockups/mockup1.html
@@ -5,12 +5,14 @@
         <title>Analychess</title>
         <meta charset='UTF-8'>
         <link rel='stylesheet' type='text/css' href='app.css' />
+        <link rel="icon" href="chess-piece-images/king-white.png" type="image/icon type">
+        <link rel='stylesheet' type='text/css' href='app.css' />
         <script type = "text/javascript" src = "mockup`.js"></script>
     </head>
 
     <body>
-
-        <h1>Analychess</h1>
+        <nav><a href="mockup1.html"><img src='chess-piece-images/king-white.png' />Analychess</a></nav>
+        <hr />
         
         <ul id = "filterList" style ="list-style: none;">
             <li> Username: 
@@ -29,6 +31,15 @@
             </li>            
 
         </ul>
+        
+        <div class = "games">
+            <ul id = "gamelist">
+                <li> <img src = "chess-piece-images/queen-white.png"> <h3><em>avocado</em> (1458) vs <em>Terry</em> (1522)</h3> </li>
+
+            </ul>
+
+
+        </div>
 
     </body>
 
