Better game header scaling

--- a/webapp/mockups/mockup2.html
+++ b/webapp/mockups/mockup2.html
@@ -15,17 +15,16 @@
 
         <nav><a href="mockup1.html"><img src='chess-piece-images/king-white.png' />Analychess</a></nav>
 
-        <div id='game-info'>
-            <div>
-                <span class="player-name">avocado</span> <img src="chess-piece-images/king-white.png" /> <span class="player-rating">1458</span>
-            </div>
+        <h1 id='game-heading'>
+                <div><span class="player-name">avocado</span> <img src="chess-piece-images/king-white.png" /> <span class="player-rating">1458</span>
+                </div>                    
 
-            <div>vs</div>
+                <div>vs</div>
             
-            <div>
+                <div>
                 <span class="player-name">Terry</span> <img src="chess-piece-images/king-black.png" /> <span class="player-rating">1522</span>
-            </div>
-        </div>
+                </div>
+        </h1>
 
 
         <div id='game-viewer'>
