Credit on css files, moves numbering

--- a/webapp/mockups/mockup2.html
+++ b/webapp/mockups/mockup2.html
@@ -44,33 +44,33 @@
 
                 <p>Moves: 
                     <ol>
-                    <li><b>e4 c5</b></li>
-                    <li><b>Nf3 d5</b></li>
-                    <li><b>exd5 Qxd5</b></li>
-                    <li><b>Nc3 Qe6+</b></li>
-                    <li><b>Qe2 Qxe2+</b></li>
-                    <li><b>Bxe2 Nf6</b></li>
-                    <li><b>O-O g6</b></li>
-                    <li><b>d3 Bg7</b></li>
-                    <li><b>Nb5 Na6</b></li>
-                    <li><b>Bf4 O-O</b></li>
-                    <li><b>d4 Bd7</b></li>
-                    <li><b>dxc5 Bxb5</b></li>
-                    <li><b>Bxb5</b> Nxc5</li>
-                    <li>Be3 Ne6</li>
-                    <li>Nd4 a6</li>
-                    <li>Bd3 Nxd4</li>
-                    <li>Bxd4 Rad8</li>
-                    <li>Bb6 Rd6</li>
-                    <li>Bc5 Rd7</li>
-                    <li>Rfe1 Re8</li>
-                    <li>c3 Nd5</li>
-                    <li>Bc2 Rc7</li>
-                    <li>Ba3 b5</li>
-                    <li>Rad1 Rd7</li>
-                    <li>c4 e6</li>
-                    <li>cxd5 exd5</li>
-                    <li>Rxe8+ Bf8</li>
+                    <li>1. <b>e4 c5</b> </li>
+                    <li>2. <b>Nf3 d5</b> </li>
+                    <li>3. <b>exd5 Qxd5</b> </li>
+                    <li>4. <b>Nc3 Qe6+</b> </li>
+                    <li>5. <b>Qe2 Qxe2+</b> </li>
+                    <li>6. <b>Bxe2 Nf6</b> </li>
+                    <li>7. <b>O-O g6</b> </li>
+                    <li>8. <b>d3 Bg7</b> </li>
+                    <li>9. <b>Nb5 Na6</b> </li>
+                    <li>10. <b>Bf4 O-O</b> </li>
+                    <li>11. <b>d4 Bd7</b> </li>
+                    <li>12. <b>dxc5 Bxb5</b> </li>
+                    <li>13. <b>Bxb5</b> Nxc5 </li>
+                    <li>14.  Be3 Ne6 </li>
+                    <li>15. Nd4 a6 </li>
+                    <li>16. Bd3 Nxd4 </li>
+                    <li>17. Bxd4 Rad8 </li>
+                    <li>18. Bb6 Rd6 </li>
+                    <li>19. Bc5 Rd7 </li>
+                    <li>20. Rfe1 Re8 </li>
+                    <li>21. c3 Nd5 </li>
+                    <li>22. Bc2 Rc7 </li>
+                    <li>23. Ba3 b5 </li>
+                    <li>24. Rad1 Rd7 </li>
+                    <li>25. c4 e6 </li>
+                    <li>26. cxd5 exd5 </li>
+                    <li>27. Rxe8+ Bf8 </li>
                                             
                     </ol>                    
                 </p>
