Skeleton for Flask app and api, no database

--- a/webapp/mockups/mockup1.html
+++ b/webapp/mockups/mockup1.html
@@ -5,18 +5,18 @@
         <title>Analychess</title>
         <meta charset='UTF-8'>
         <link rel='stylesheet' type='text/css' href='app.css' />
-        <link rel="icon" href="chess-piece-images/king-white.png" type="image/icon type">
+        <link rel="icon" href="../static/images/king-white.png" type="image/icon type">
         <link rel='stylesheet' type='text/css' href='app.css' />
         <script type = "text/javascript" src = "mockup1.js"></script>
     </head>
 
     <body>
-        <nav><a href="mockup1.html"><img src='chess-piece-images/king-white.png' />Analychess</a></nav>
+        <nav><a href="mockup1.html"><img src='../static/images/king-white.png' />Analychess</a></nav>
         <div class = "pageelements">
             <div class = introduction>
                 <ul style ="list-style: none;">
                     <h2>Welcome to Analychess!</h2>
-                    <p><img id = "homeicon" src ="chess-piece-images/knight-white.png"></p>
+                    <p><img id = "homeicon" src ="../static/images/knight-white.png"></p>
                 </ul>
             </div>
             <div class="searchfunction">
@@ -50,7 +50,7 @@
             <h2>Top Games of the Day:</h2>
             <ul style ="list-style: none;">
                 <li> 
-                    <img src = "chess-piece-images/queen-white.png"/> 
+                    <img src = "../static/images/queen-white.png"/> 
                     <h3><a href="mockup2.html"><em>avocado</em> (1458) vs <em>Terry</em> (1522)</a></h3> 
                 </li>
 
