--- a/webapp/mockups/mockup2.html
+++ b/webapp/mockups/mockup2.html
@@ -34,6 +34,8 @@
 
         <div class='container'>
 
+            <div class='far-left'></div>
+
             <div class='split left'>
 
                 <div id='turn-panel' class="panel">
