All mockups use same css file

--- a/webapp/mockups/mockup1.html
+++ b/webapp/mockups/mockup1.html
@@ -4,9 +4,8 @@
     <head>
         <title>Analychess</title>
         <meta charset='UTF-8'>
-        <link rel='stylesheet' type='text/css' href='app.css' />
+        <link rel='stylesheet' type='text/css' href='../static/app.css' />
         <link rel="icon" href="../static/images/king-white.png" type="image/icon type">
-        <link rel='stylesheet' type='text/css' href='app.css' />
         <script type = "text/javascript" src = "mockup1.js"></script>
     </head>
 
