--- a/webapp/mockups/mockup2.html
+++ b/webapp/mockups/mockup2.html
@@ -5,8 +5,7 @@
         <title>Analychess</title>
         <meta charset='UTF-8'>
         <link rel="icon" href="../static/images/king-white.png" type="image/icon type">
-        <link rel='stylesheet' type='text/css' href='app.css' />
-        <link rel='stylesheet' type='text/css' href='mockup2.css' />
+        <link rel='stylesheet' type='text/css' href='../static/app.css' />
         <script type='text/javascript' src='mockup2.js'></script>
     </head>
 
